fixed padding/responsivity and margin error in footer

--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,7 @@ champagne - #EACDC2
 body {
     margin: 0px;
     padding: 0px;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
