fixed parallax scrolling issue for small screens ('display: none') via media query.

--- a/styles/global.css
+++ b/styles/global.css
@@ -124,7 +124,11 @@ body {
 
 @media only screen and (max-width: 576px) {
     .parallax {
-        background-size: contain;
+        display: none;
+    }
+
+    .parallax2 {
+        display: none;
     }
 }
 
