modified margins on header

--- a/styles/header.css
+++ b/styles/header.css
@@ -13,6 +13,14 @@ header {
     height: 550px;
     overflow: hidden;
     font-family: 'Playfair Display', serif;
+    margin-top: -11%
+}
+
+@media only screen and (min-width: 1024px) {
+    header {
+        margin-top: -5%
+    }
+
 }
 
 /* z-index */
